<resources>
    <!--xml-->
    <string name="app_name">android-repo-04</string>
    <string name="login_title">What\'s In\nMy GitHub</string>
    <string name="login_login">GitHub 로그인</string>

    <string name="main_title">What\'s In My GitHub</string>
    <string name="main_issue">Issue</string>
    <string name="main_notification">Notification</string>
    <string name="main_empty_list">Empty !</string>
    <string name="main_empty_btn">Reload</string>

    <string name="profile_title">Profile</string>
    <string name="profile_repository">Repositories</string>
    <string name="profile_star">Starred</string>
    <string name="issue_filter">Filter</string>
    <string name="profile_follower">Followers</string>
    <string name="profile_point">・</string>
    <string name="profile_following">Following</string>

    <!--class-->

    <string name="user_info">userInfo</string>
    <string name="star_count">starCount</string>

    <string name="code">code</string>
    <string name="login_path_auth">authorize</string>
    <string name="login_query_scope">user,repo,notifications</string>

    <string name="toast_error_token">사용자의 토큰 정보가 정확하지 않습니다. 개발자에게 문의 바랍니다.</string>
    <string name="toast_error_400">잘못된 요청 메시지가 수신되었습니다. 개발자에게 문의 바랍니다.</string>
    <string name="toast_error_403">과도한 요청으로 서비스 사용이 거부되었습니다. 재로그인 후 다시 실행해주십시오.</string>
    <string name="toast_error_422">처리할 수 없는 쿼리를 수신했습니다. 제한된 서비스 내에서 이용해주십시오.</string>
    <string name="toast_error_500">GitHub 서버 문제로 정상 실행할 수 없습니다. 잠시 후 다시 시도해주십시오.</string>
    <string name="toast_error"> Error :: 개발자에게 문의 바랍니다.</string>

    <string name="tag_issue_fragment">issue</string>
    <string name="tag_notification_fragment">notification</string>

    <string name="no_location">No Location</string>
    <string name="no_blog">No blog</string>
    <string name="no_email">No email</string>

    <string name="state_open">open</string>
    <string name="state_closed">closed</string>
    <string name="state_all">all</string>
    <string name="search_title">Search</string>
    <string name="search_empty_description">Search all of GitHub for People,\nRepositories, Organizations, Isuues,\nand Pull Requests.</string>
    <string name="search_empty_title">Find Your Stuff</string>
</resources>