<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_main_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    tools:context=".view.main.MainActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/layout_main_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/text_main_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/main_title"
            android:textColor="@color/white"
            android:textSize="16dp"
            android:textStyle="bold"
            android:letterSpacing="0.05"
            android:padding="24dp" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_search_bold"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="12dp"/>
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="@drawable/button_round"
            android:src="@drawable/ic_mail"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="24dp"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_main_issue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_round"
        android:text="@string/main_issue"
        android:textColor="@color/white"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="8dp"
        android:textAllCaps="false"
        android:letterSpacing="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_main_notification"
        app:layout_constraintTop_toBottomOf="@id/layout_main_appbar"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_main_notification"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_round"
        android:backgroundTint="@color/navy"
        android:text="@string/main_notification"
        android:textColor="@color/white"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="24dp"
        android:textAllCaps="false"
        android:letterSpacing="0.06"
        app:layout_constraintStart_toEndOf="@id/btn_main_issue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_main_appbar"/>

    <FrameLayout
        android:id="@+id/layout_main_frame"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="24dp"
        app:layout_constraintTop_toBottomOf="@id/btn_main_issue"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>