<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_profile_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    tools:context=".view.profile.ProfileActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/layout_profile_toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        app:contentInsetStart="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/img_profile_back"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_marginStart="12dp"
            android:background="@drawable/icon_ripple_effect"
            android:padding="16dp"
            tools:src="@drawable/ic_back" />

        <TextView
            android:id="@+id/text_profile_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/profile_title"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/img_profile_profile"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/ic_user"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_profile_toolbar" />

    <TextView
        android:id="@+id/text_profile_display_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/img_profile_profile"
        app:layout_constraintTop_toTopOf="@id/img_profile_profile"
        tools:text="최광현" />

    <TextView
        android:id="@+id/text_profile_user_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/grey"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/text_profile_display_name"
        app:layout_constraintTop_toBottomOf="@id/text_profile_display_name"
        tools:text="kwangddang" />

    <TextView
        android:id="@+id/text_profile_bio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/background_round_navy"
        android:ellipsize="end"
        android:maxLines="2"
        android:paddingHorizontal="12dp"
        android:textColor="@color/grey"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/text_profile_display_name"
        app:layout_constraintTop_toBottomOf="@id/text_profile_user_name"
        tools:text="Android Developer" />

    <View
        android:id="@+id/view_profile_divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@color/navy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_profile_bio" />

    <ImageView
        android:id="@+id/img_profile_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_location"
        android:layout_marginStart="24dp"
        android:layout_marginTop="18dp"
        app:layout_constraintTop_toBottomOf="@id/view_profile_divider"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/text_profile_location"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toEndOf="@id/img_profile_location"
        app:layout_constraintTop_toTopOf="@id/img_profile_location"
        app:layout_constraintBottom_toBottomOf="@id/img_profile_location"
        tools:text="Seoul, Korea"/>

    <ImageView
        android:id="@+id/img_profile_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_link"
        android:layout_marginTop="21dp"
        app:layout_constraintTop_toBottomOf="@id/img_profile_location"
        app:layout_constraintStart_toStartOf="@+id/img_profile_location"/>

    <TextView
        android:id="@+id/text_profile_link"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toEndOf="@id/img_profile_link"
        app:layout_constraintTop_toTopOf="@id/img_profile_link"
        app:layout_constraintBottom_toBottomOf="@id/img_profile_link"
        tools:text="http://medium.com/@sam"/>

    <ImageView
        android:id="@+id/img_profile_mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_mail"
        android:layout_marginTop="21dp"
        app:layout_constraintTop_toBottomOf="@id/img_profile_link"
        app:layout_constraintStart_toStartOf="@+id/img_profile_link"/>

    <TextView
        android:id="@+id/text_profile_mail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toEndOf="@id/img_profile_mail"
        app:layout_constraintTop_toTopOf="@id/img_profile_mail"
        app:layout_constraintBottom_toBottomOf="@id/img_profile_mail"
        tools:text="sam@gmail.com"/>

    <ImageView
        android:id="@+id/img_profile_follower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_user"
        android:layout_marginTop="21dp"
        app:layout_constraintTop_toBottomOf="@id/img_profile_mail"
        app:layout_constraintStart_toStartOf="@+id/img_profile_mail"/>

    <TextView
        android:id="@+id/text_profile_follower"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toEndOf="@id/img_profile_follower"
        app:layout_constraintTop_toTopOf="@id/img_profile_follower"
        app:layout_constraintBottom_toBottomOf="@id/img_profile_follower"
        tools:text="59 Followers and 6 Following"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_profile_inner_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:padding="16dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/background_round_navy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_profile_follower">

        <View
            android:id="@+id/view_profile_repository"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/background_round_primary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageView
            android:id="@+id/img_profile_repository"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_repository"
            app:layout_constraintStart_toStartOf="@id/view_profile_repository"
            app:layout_constraintEnd_toEndOf="@id/view_profile_repository"
            app:layout_constraintTop_toTopOf="@id/view_profile_repository"
            app:layout_constraintBottom_toBottomOf="@id/view_profile_repository"/>

        <TextView
            android:id="@+id/text_profile_repository"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:text="@string/profile_repository"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toEndOf="@id/view_profile_repository"
            app:layout_constraintTop_toTopOf="@id/view_profile_repository"
            app:layout_constraintBottom_toBottomOf="@id/view_profile_repository"/>

        <TextView
            android:id="@+id/text_profile_repository_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/white"
            app:layout_constraintTop_toTopOf="@id/text_profile_repository"
            app:layout_constraintBottom_toBottomOf="@id/text_profile_repository"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="41"/>

        <View
            android:id="@+id/view_profile_star"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/background_round_primary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_profile_repository"/>

        <ImageView
            android:id="@+id/img_profile_star"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_star"
            app:layout_constraintStart_toStartOf="@id/view_profile_star"
            app:layout_constraintEnd_toEndOf="@id/view_profile_star"
            app:layout_constraintTop_toTopOf="@id/view_profile_star"
            app:layout_constraintBottom_toBottomOf="@id/view_profile_star"/>

        <TextView
            android:id="@+id/text_profile_star"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:text="@string/profile_star"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toEndOf="@id/view_profile_star"
            app:layout_constraintTop_toTopOf="@id/view_profile_star"
            app:layout_constraintBottom_toBottomOf="@id/view_profile_star"/>

        <TextView
            android:id="@+id/text_profile_star_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/white"
            app:layout_constraintTop_toTopOf="@id/text_profile_star"
            app:layout_constraintBottom_toBottomOf="@id/text_profile_star"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="57"/>
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>